# enyan

./: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  aublchinese.html  crash_log.txt  debug_page.html  dev.sh  flutter_launcher_icons.yaml  full_log.txt  pubspec.yaml  release.sh  setup.sh  temp_align.txt  temp_dump.txt  temp_fail_test.txt
android/: build.gradle.kts
assets/: audio_timestamps.json  bible_chs.db  bible_lexicon_chs.json  bible_lexicon_cht.json
data/: bible_audio_urls.txt
docs/: 0120.md  0206.md  0211.md  架构书.md
integration_test/: simple_test.dart
lib/: main.dart
linux/: CMakeLists.txt
macos/: Podfile
resources/: bible_initial.db  init_db.sql
rust/: Cargo.toml
rust/examples/: encodec_demo.md  mp3_to_ecdc.rs
rust/heheben/mp3/: Mark_01.ecdc  Mark_01_6k.opus  Mark_01_8k.opus  Mark_01_test.ecdc  play.sh
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
scripts/: align_audio_aeneas.py  batch_convert_opus.py  build_db.py  build_real_packs.py  check_encoding.py  check_missing_audio.py  clean_cache.sh  cleanup_bad_folders.sh  compare_bible.py  convert_audio_opus.py  convert_audio_opus_low.py  convert_db_cht.py  data_diffs.json  debug_scraper.py  download_audio.py  download_bible.py  download_cuv_audio.py  download_full_audio.py  encodec_decoder.py  encodec_maker.py  export_bible.py  extract_bible_chars.py  fix_john.sql  fix_luke.sql  fix_mark.sql  fix_matthew.sql  fix_verse_1_text.py  gen_traditional.py  gen_weights.py  generate_6k.sh  generate_8k.sh  generate_corrected_urls.py  (+14 more)
(+110 files in other folders)
